<resources>
    <string name="app_name">Doktara Sor</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="create_account">Create Account</string>
    <string name="age">AGE</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">FULL NAME</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="page1">Home Fragment</string>
    <string name="page2">List Fragment</string>
    <string name="page3">Profile Fragment</string>
    <string name="name">Name</string>
    <string name="omer_yavuzyigit">Ömer Yavuzyiğit</string>
    <string name="profile_name_explanation">This is not your username or id . This name is \ndisplayed by people logged into the Doktora Sor\napplication.</string>
    <string name="bize_heryer_trabzon">Bize HerYer Trabzon</string>
    <string name="about_me">About Me</string>
    <string name="phone">Phone</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_about_me">Add about me</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="enter_yor_name">Enter yor name</string>
    <string name="log_out">Log Out</string>
    <string name="image">Image</string>
    <string name="please_report_your_problem">Please report your problem</string>
    <string name="description">Description</string>
    <string name="doctor">Doctor</string>
    <string name="policlinic">Policlinic</string>
    <string name="choose_a_polyclinic">Choose a polyclinic</string>
    <string name="update_succes">Successfully updated</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="List_title">My Problems</string>
    <string name="succesful_save">Successfully saved data.</string>
    <string name="user">User</string>
    <string name="google_sigin_failed">Google Sign In failed, update UI appropriately</string>
    <string name="password_and_password_replay_mismatch">Password and confirm password must be the same</string>
    <string name="cannot_be_blank">Cannot be blank</string>
    <string name="success">Success</string>
    <string name="pattern_password_error">At least one number, one lowercase letter, at least one uppercase letter, no spaces and a minimum of 8 characters</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="document_error">Error getting documents.</string>
    <string name="please_enter_policlinic">Please enter policlinic.</string>
    <string name="please_enter_title">Please enter title.</string>
    <string name="please_enter_description">Please enter description.</string>
    <string name="image_uploaded_successfully">Your image was uploaded successfully</string>
    <string name="image_uploaded_error">A problem was encountered while uploading your image.</string>
    <string name="select_image">Please select the image to upload</string>
    <string name="storage_permission_error">Oops, just you denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">İmage selection failed</string>
    <string name="doctor_list_title">Problems</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="answer">Answer</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer </string>
    <string name="answered">Answered</string>
    <string name="not_answered">Not answered</string>
    <string name="all">All</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="delete">Delete</string>
    <string name="error_getting">Error getting documents.</string>
    <string name="sory">Olmadı, hayatına küs belki bir zaman tekrar dene olur. Yeterki o olmaz demesin</string>
    <string name="success_logged">You are logged in successfully</string>
    <string name="registed_failed">Registration Failure</string>
    <string name="error_user_control">Error encountered while connecting to users table</string>
    <string name="cant_ask_questions">You already asked a question today, you can\'t ask again.\nIf you want to ask a question, you can delete the other question you asked today.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="standart_seen">New</string>
    <string name="asked">Asked</string>
    <string name="answeredQue">Answered</string>


    <string-array name="doctorlist">
        <item>Ear, Nose, Throat</item>
        <item>Eye</item>
        <item>Hand Surgery</item>
        <item>Dentist</item>
        <item>Endodontics</item>
        <item>Rehabilitation</item>
        <item>Gastroenterology Surgery</item>
        <item>Thoracic Surgery</item>
        <item>Chest Diseases</item>
        <item>Hematology</item>
        <item>Internal diseases</item>
        <item>Gynecological Oncology Surgery</item>
        <item>Cardiovascular Surgery</item>
        <item>Cardiology</item>
        <item>Nephrology</item>
        <item>Neonatology</item>
        <item>Neurology</item>
        <item>Gynecology and Obstetrics</item>
        <item>Orthodontics</item>
        <item>Perinatology</item>
        <item>Plastic surgery</item>
        <item>Radiation oncology</item>
        <item>Rheumatology</item>
        <item>Urology</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Information">İnformation</string>
</resources>