<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_dialog_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text"
        android:textColorHint="@color/gray"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="120"
        app:counterTextColor="@color/blue"
        app:startIconDrawable="@drawable/ic_info"
        app:startIconTint="@color/black">

        <EditText
            android:id="@+id/et_dialog_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:maxLength="120"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dialog_about_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/error_btn"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_dialog_about_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_design"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>